--- a/autosize/build.gradle
+++ b/autosize/build.gradle
@@ -1,33 +1,28 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion rootProject.compileSdkVersion
-    buildToolsVersion rootProject.buildToolsVersion
+  compileSdkVersion rootProject.compileSdkVersion
+  namespace "me.jessyan.autosize"
 
-    defaultConfig {
-        minSdkVersion rootProject.minSdkVersion
-        targetSdkVersion rootProject.targetSdkVersion
-        versionCode rootProject.versionCode
-        versionName rootProject.versionName
-        consumerProguardFiles 'proguard-rules.pro'
-    }
+  defaultConfig {
+    minSdkVersion rootProject.minSdkVersion
+    targetSdkVersion rootProject.targetSdkVersion
+    consumerProguardFiles 'proguard-rules.pro'
+  }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
+  }
 
-    lintOptions {
-        abortOnError false
-        warning 'InvalidPackage'
-    }
+  lintOptions {
+    abortOnError false
+    warning 'InvalidPackage'
+  }
 }
 
 dependencies {
-    compileOnly rootProject.appcompat_v7
-    compileOnly rootProject.androidx_appcompat
+  compileOnly rootProject.androidx_appcompat
 }
-
-apply from: 'bintray.gradle'
