--- a/build.gradle
+++ b/build.gradle
@@ -1,38 +1,34 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    repositories {
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
-        jcenter()
-        google()
+  repositories {
+    maven {
+      setUrl("https://maven.aliyun.com/repository/public")
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
-        classpath 'com.novoda:bintray-release:0.9.2'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+    google()
+    mavenCentral()
+  }
+  dependencies {
+    classpath('com.android.tools.build:gradle:8.10.0')
+  }
 }
 
 allprojects {
-    repositories {
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
-        jcenter()
-        google()
+  repositories {
+    maven {
+      setUrl("https://maven.aliyun.com/repository/public")
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+    google()
+    mavenCentral()
+  }
 }
 
 ext {
-    minSdkVersion = 14
-    targetSdkVersion = 29
-    compileSdkVersion = 29
-    buildToolsVersion = "29.0.2"
-    versionCode = 41
-    versionName = "1.2.1"
-    appcompat_v7 = "com.android.support:appcompat-v7:28.0.0"
-    androidx_appcompat = "androidx.appcompat:appcompat:1.1.0"
+  minSdkVersion = 14
+  targetSdkVersion = 29
+  compileSdkVersion = 29
+  buildToolsVersion = "29.0.2"
+  versionCode = 41
+  versionName = "1.2.1"
+  androidx_appcompat = "androidx.appcompat:appcompat:1.1.0"
 }
