--- a/demo-androidx/build.gradle
+++ b/demo-androidx/build.gradle
@@ -1,28 +1,26 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion rootProject.compileSdkVersion
-    buildToolsVersion rootProject.buildToolsVersion
+  compileSdkVersion rootProject.compileSdkVersion
+  namespace "me.jessyan.autosize.demo.androidx"
 
-    defaultConfig {
-        applicationId "me.jessyan.autosize.demo.androidx"
-        minSdkVersion rootProject.minSdkVersion
-        targetSdkVersion rootProject.targetSdkVersion
-        versionCode rootProject.versionCode
-        versionName rootProject.versionName
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+  defaultConfig {
+    applicationId "me.jessyan.autosize.demo.androidx"
+    minSdkVersion rootProject.minSdkVersion
+    targetSdkVersion rootProject.targetSdkVersion
+    versionCode rootProject.versionCode
+    versionName rootProject.versionName
+  }
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+  }
 }
 
 dependencies {
-//    implementation 'me.jessyan:autosize:1.2.1'
-    implementation project(':autosize')
-    implementation rootProject.androidx_appcompat
-    testImplementation 'junit:junit:4.12'
+  //    implementation 'me.jessyan:autosize:1.2.1'
+  implementation project(':autosize')
+  implementation rootProject.androidx_appcompat
 }
